edited header, added feed to the home, integrated firebasae to add data and read data from firestore

--- a/src/components/Header/HeaderOption/HeaderOption.css
+++ b/src/components/Header/HeaderOption/HeaderOption.css
@@ -7,6 +7,15 @@
     cursor: pointer;
 }
 
+.headerOption > a {
+    text-decoration: none;
+    color: gray;
+}
+
+.headerOption > a:hover {
+    color: black;
+}
+
 .headerOption:hover {
     color: black;
 }
